CustomObjects/objects/invoiceit_s__Payment__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <description>The Account/Customer who has made this Payment</description>
        <inlineHelpText>The Account/Customer who has made this Payment</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Allocated_Amount__c</fullName>
        <description>The Amount that has already been Allocated.</description>
        <inlineHelpText>The Amount that has already been Allocated.</inlineHelpText>
        <label>Allocated Amount</label>
        <summarizedField>invoiceit_s__Payment_Allocation__c.invoiceit_s__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>invoiceit_s__Payment_Allocation__c.invoiceit_s__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>invoiceit_s__Payment_Allocation__c.invoiceit_s__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Cash_Allocation_Rule__c</fullName>
        <formula>TEXT( invoiceit_s__Account__r.invoiceit_s__Cash_Allocation_Rule__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Allocation Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Cheque_Date__c</fullName>
        <label>Cheque Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Cheque_Number__c</fullName>
        <label>Cheque Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The payment Currency</description>
        <inlineHelpText>The payment Currency</inlineHelpText>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exchange_Rate_Applied__c</fullName>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this is selected on creation of Payment,allocation is done automatically</description>
        <inlineHelpText>If this is selected on creation of Payment,allocation is done automatically</inlineHelpText>
        <label>Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>invoiceit_s__Invoice__c.invoiceit_s__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.invoiceit_s__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>invoiceit_s__Invoice__c.invoiceit_s__CurrencyL__c</field>
                <operation>equals</operation>
                <valueField>$Source.invoiceit_s__Currency__c</valueField>
            </filterItems>
            <filterItems>
                <field>invoiceit_s__Invoice__c.invoiceit_s__Invoice_State__c</field>
                <operation>notEqual</operation>
                <value>Proforma</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Paid_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally choose the Contact who made this Payment. This Contact must belong to the same Account.</description>
        <inlineHelpText>Optionally choose the Contact who made this Payment. This Contact must belong to the same Account.</inlineHelpText>
        <label>Paid by</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can choose a contact that belongs to the same account as the payment.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.invoiceit_s__Account__c</valueField>
            </filterItems>
            <infoMessage>Choose the contact who made this payment. This contact must belong to the same account as the payment.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Created_From__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payment Created From</label>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipLabel>Payments (Payment Created From)</relationshipLabel>
        <relationshipName>Payment_Created_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The Date on which  this Payment was made.</description>
        <inlineHelpText>The Date on which  this Payment was made.</inlineHelpText>
        <label>Payment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Description__c</fullName>
        <label>Payment Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>From Credit Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Refunded_Amount__c</fullName>
        <label>Refunded Amount</label>
        <summarizedField>invoiceit_s__Refund_Line__c.invoiceit_s__Refund_Amount__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Refund_Line__c.invoiceit_s__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#FF0000</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>invoiceit_s__Transaction__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unallocated_Amount__c</fullName>
        <description>The amount that is un-allocated and can be used.</description>
        <formula>IF( ISPICKVAL(invoiceit_s__Status__c, &apos;Cancelled&apos;), 0, invoiceit_s__Amount__c  -  invoiceit_s__Allocated_Amount__c -  invoiceit_s__Refunded_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount that is un-allocated and can be used.</inlineHelpText>
        <label>Unallocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>invoiceit_s__All_Payments</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Account__c</columns>
        <columns>invoiceit_s__Paid_by__c</columns>
        <columns>invoiceit_s__Amount__c</columns>
        <columns>invoiceit_s__Currency__c</columns>
        <columns>invoiceit_s__Payment_Type__c</columns>
        <columns>invoiceit_s__Payment_Date__c</columns>
        <columns>invoiceit_s__Allocated_Amount__c</columns>
        <columns>invoiceit_s__Unallocated_Amount__c</columns>
        <columns>invoiceit_s__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Payments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>invoiceit_s__Cancelled_Payments</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Account__c</columns>
        <columns>invoiceit_s__Paid_by__c</columns>
        <columns>invoiceit_s__Amount__c</columns>
        <columns>invoiceit_s__Currency__c</columns>
        <columns>invoiceit_s__Payment_Type__c</columns>
        <columns>invoiceit_s__Payment_Date__c</columns>
        <columns>invoiceit_s__Allocated_Amount__c</columns>
        <columns>invoiceit_s__Unallocated_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cancelled Payments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>invoiceit_s__Completed_Payments</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Account__c</columns>
        <columns>invoiceit_s__Paid_by__c</columns>
        <columns>invoiceit_s__Amount__c</columns>
        <columns>invoiceit_s__Currency__c</columns>
        <columns>invoiceit_s__Payment_Type__c</columns>
        <columns>invoiceit_s__Payment_Date__c</columns>
        <columns>invoiceit_s__Allocated_Amount__c</columns>
        <columns>invoiceit_s__Unallocated_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>invoiceit_s__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Payments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Cannot_change_status_from_Cancelled</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE
(invoiceit_s__Status__c), 
&quot;Cancelled&quot;) &amp;&amp; ISCHANGED(invoiceit_s__Status__c)</errorConditionFormula>
        <errorDisplayField>invoiceit_s__Status__c</errorDisplayField>
        <errorMessage>You cannot change the status of a cancelled payment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Cannot_change_the_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( invoiceit_s__Amount__c )</errorConditionFormula>
        <errorDisplayField>invoiceit_s__Amount__c</errorDisplayField>
        <errorMessage>You cannot change the amount of payments. Alternately you can cancel this payment and create a new payment with a different amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Cheque_Details_valid_for_cheque_payments</fullName>
        <active>true</active>
        <description>The cheque details can be populated only for cheque payments</description>
        <errorConditionFormula>AND(!ISPICKVAL( invoiceit_s__Payment_Type__c , &quot;Cheque&quot;), OR( invoiceit_s__Cheque_Number__c != Null,  invoiceit_s__Cheque_Date__c  != null,  invoiceit_s__Bank_Name__c != null))</errorConditionFormula>
        <errorMessage>Cheque Number, Cheque Date and Bank Name can be populated only for the payment type &quot;Cheque&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Cheque_Number_Req_For_Cheque_Payment</fullName>
        <active>true</active>
        <description>Cheque Number Required For Cheque Payment</description>
        <errorConditionFormula>IF( (ISPICKVAL( invoiceit_s__Payment_Type__c , &quot;Cheque&quot;)) &amp;&amp; (invoiceit_s__Cheque_Number__c == null) , true, false)</errorConditionFormula>
        <errorDisplayField>invoiceit_s__Cheque_Number__c</errorDisplayField>
        <errorMessage>Enter the Cheque number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Invoice_Status_should_be_posted</fullName>
        <active>true</active>
        <errorConditionFormula>AND((invoiceit_s__Invoice__c != NULL), !(ISPICKVAL(invoiceit_s__Invoice__r.invoiceit_s__Invoice_Status__c, &apos;Posted&apos;)),ISNEW())</errorConditionFormula>
        <errorDisplayField>invoiceit_s__Invoice__c</errorDisplayField>
        <errorMessage>You can select only posted invoices</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Payment_Amount_Validation</fullName>
        <active>true</active>
        <description>You cannot create payment if the payment amount is greater than invoice unpaid amount</description>
        <errorConditionFormula>AND((invoiceit_s__Invoice__c != NULL),(invoiceit_s__Amount__c &gt; invoiceit_s__Invoice__r.invoiceit_s__Unpaid_Amount__c), ISNEW() )</errorConditionFormula>
        <errorDisplayField>invoiceit_s__Amount__c</errorDisplayField>
        <errorMessage>Please make sure that  payment amount should be less than or equal to invoice unpaid amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Payment_status_cannot_be_Cancelled</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW()  &amp;&amp;  ISPICKVAL(invoiceit_s__Status__c, &quot;Cancelled&quot;)</errorConditionFormula>
        <errorMessage>You cannot insert the payment status as Cancelled</errorMessage>
    </validationRules>
</CustomObject>